Installed swagger
